--- a/css/sass/template/posts/_link-exif-question.scss
+++ b/css/sass/template/posts/_link-exif-question.scss
@@ -19,3 +19,7 @@
 .asker-data {
     padding-left: 1em;
 }
+
+.replies {
+	margin-top: .5em;
+}
